--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,122 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+body{
+  padding: 0;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+a{
+  text-decoration: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+button{
+  cursor: pointer;
+}
+
+ul{
+  list-style: none;
+  font-size: 18px;
+}
+
+header{
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+footer{
+  color: white;
+}
+
+header ul{
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin: 0;
+}
+
+.hero-container{
+  height: 100vh;
+  box-sizing: border-box;
+  padding: 0px 20px;
+  background: rgb(49,25,86);
+  background: linear-gradient(135deg, rgba(49,25,86,1) 30%, rgba(255,125,26,1) 100%);
+}
+
+.home-top-container{
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-top-center{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-top-center-btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 250px;
+  width: 100%;
+}
+
+.slogan{
+  font-size: 48px;
+  text-align: center;
+}
+
+.home-btn{
+  width: 20%;
+  height: 300px;
+  padding: 10px 20px;
+  font-size: 40px;
+  font-weight: bold;
+  outline: unset;
+  border: unset;
+  color: white;
+  background-color: rgba(255,125,26,1);
+}
+
+.footer-container{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  padding: 40px 60px;
+  background: rgb(49,25,86);
+  background: linear-gradient(135deg, rgba(49,25,86,1) 30%, rgba(255,125,26,1) 100%);
+  margin: 0;
+}
+
+.footer-container a{
+  color: white;
+}
+
+.image{
+  height: 50px;
+  width: auto;
+}
+
+.hr{
+  width: 10%;
+}
+
+.privacy-terms-container{
+  text-align: left;
+  padding: 25px;
+  width: 60%;
+  margin: 0 auto;
+}
+
+.home-body{
+  background-color: #eee;
+  height: 1000px;
 }
