--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
+html{
+  font-family: "Inter", sans-serif;
+  font-weight: 350;
+}
+
 body{
   padding: 0;
   margin: 0;
+  background-color: #f2f2f2;
 }
 
 a{
@@ -14,109 +20,331 @@ button{
 
 ul{
   list-style: none;
-  font-size: 18px;
+  margin: 0;
+  padding: 0;
 }
 
-header{
-  color: white;
+nav{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  border-bottom: 1px solid #999999;
+  background: rgb(234,234,234);
+  background: linear-gradient(0deg, rgba(234,234,234,1) 0%, rgba(165,165,165,1) 100%);
+  padding: 15px 10%;
 }
 
-footer{
-  color: white;
+.section{
+  width: 80%;
+  margin: 0 auto;
 }
 
-header ul{
+.nav-items-container{
   display: flex;
   align-items: center;
-  gap: 30px;
-  margin: 0;
+  justify-content: space-evenly;
+  gap: 50px;
+  font-size: 22px;
 }
 
-.hero-container{
-  height: 100vh;
-  box-sizing: border-box;
-  padding: 0px 20px;
-  background: rgb(49,25,86);
-  background: linear-gradient(135deg, rgba(49,25,86,1) 30%, rgba(255,125,26,1) 100%);
+.nav-items-container button{
+  border: 1px solid #8C281F;
+  border-radius: 10px;
+  padding: 6px 20px;
+  color: #D94A4A;
+  font-size: 22px;
+  background-color: transparent;
 }
 
-.home-top-container{
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.home-top-center{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.home-top-center-btn{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 250px;
-  width: 100%;
-}
-
-.slogan{
-  font-size: 48px;
-  text-align: center;
-}
-
-.home-btn{
-  width: 20%;
-  height: 300px;
-  padding: 10px 20px;
-  font-size: 40px;
-  font-weight: bold;
-  outline: unset;
-  border: unset;
-  color: white;
-  background-color: rgba(255,125,26,1);
-}
-
-.footer-container{
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 25px;
-  padding: 40px 60px;
-  background: rgb(49,25,86);
-  background: linear-gradient(135deg, rgba(49,25,86,1) 30%, rgba(255,125,26,1) 100%);
-  margin: 0;
-}
-
-.footer-container a{
-  color: white;
-}
-
-.image{
+.logo-container img{
+  object-fit: cover;
+  width: 200px;
   height: 50px;
+}
+
+.home-section1-top-subheader{
+  width: 40%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+}
+
+.home-section1-top-subheader div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.home-section1-white-text{
+  color: #f2f2f2;
+}
+
+.home-section1-btn-container{
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  font-size: 36px;
+  top: 20%;
+}
+
+.home-section1-btn-container button{
+  background-color: black;
+  border: unset;
+  width: 130px;
+  height: 60px;
+  border-radius: 10px;
+}
+
+.home-section1-darker-text{
+  color: #8c281f;
+  font-weight: 100;
+}
+
+.home-section1-top-header{
+  font-size: calc(16px + 2vw);
+}
+
+.home-section1-btn-header{
+  font-size: calc(16px + 3vw);
+}
+
+.home-section1-top-container{
+  letter-spacing: 3px;
+  position: relative;
+  margin: 60px auto;
+  box-sizing: border-box;
+}
+
+.home-section1-middle-container{
+  display: flex;
+  width: 80%;
+  margin: 70px auto;
+  gap: 40px 40px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home-section1-middle-container li{
+  color: black;
+  border: 1px solid #8e8e8e;
+  border-radius: 10px;
+  width: 160px;
+  height: 100px;
+  box-sizing: border-box;
+}
+
+.home-section1-middle-container li a{
+  color: black;
+  width: 100%;
+  height: 100%;
+  display: block;
+  padding: 10px 20px;
+  box-sizing: border-box;
+}
+
+.home-section1-img-container img{
+  width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+.home-section2{
+  margin: 150px auto;
+}
+
+.home-section2-dot{
+  color: #8C281F;
+}
+
+.home-section2-header{
+  font-size: 48px;
+  margin-bottom: 130px;
+}
+
+.home-section2-benefits img{
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
+}
+
+.home-section2-benefits h3{
+  font-weight: 400;
+  font-size: 32px;
+  margin-bottom: auto;
+  margin-top: 30px;
+}
+
+.home-section2-benefits p{
+  font-size: 16px;
+}
+
+.home-section2-benefits{
+  display: flex;
+  align-items: stretch;
+  width: 100%;
+  gap: 60px;
+}
+
+.home-section2-benefits li{
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+}
+
+.home-section1main{
+  background-color: #D94A4A;
+  width: 100%;
+  padding: 30px 0;
+}
+
+.home-section1main-whitetext{
+  color: white;
+}
+
+.home-section1main-categories img{
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  background-color: white;
+  object-fit: cover;
+}
+
+.home-section1main-categories ul{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 36px;
+  padding: 0;
+  justify-items: center;
+  width: 40%;
+  margin: 0 auto;
+}
+
+.home-section1main-categories li{
   width: auto;
 }
 
-.hr{
-  width: 10%;
+.home-section1main-categories ul li a{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
 }
 
-.privacy-terms-container{
-  text-align: left;
-  padding: 25px;
+.home-section1main-categories p{
+  font-size: 15px;
+  margin: 0;
+}
+
+.home-section1main-categories-header{
+  font-size: 40px;
+  font-weight: 300;
+}
+
+.home-section1-light{
+  font-weight: 200;
+}
+
+.home-section1main-container{
+  margin: 0 auto;
+  text-align: center;
+}
+
+.home-section1main-inputs{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
   width: 60%;
   margin: 0 auto;
 }
 
-.home-body{
-  background-color: #eee;
-  height: 1000px;
+.search-bar {
+  flex: 3.27;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  width: 300px;
+  border: 1px solid #8C281F;
+}
+
+.search-input {
+  height: 100%;
+  box-sizing: border-box;
+  outline: none;
+  width: 100%;
+  padding: 10px 15px;
+  border-radius: 10px 0 0 10px;
+  background-color: #F2F2F2;
+  border: none;
+  color: #8C8C87;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.search-button {
+  border-radius: 0 10px 10px 0;
+  color: #D94A4A;
+  cursor: pointer;
+  background-color: #F2F2F2;
+  border: none;
+  padding: 9px;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.search-button i {
+  font-size: 20px;
+  background-color: #F2F2F2;
+}
+
+.city-dropdown {
+  flex: 1;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  width: 300px;
+  border: 1px solid #8C281F;
+}
+
+.dropdown-input {
+  height: 100%;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px 15px;
+  border-radius: 10px 0 0 10px;
+  outline: none;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  appearance: none;
+  background-color: #F2F2F2;
+  color: #8C8C87;
+  border: none;
+}
+
+.dropdown-button {
+  border-radius: 0 10px 10px 0;
+  color: #D94A4A;
+  cursor: pointer;
+  background-color: #F2F2F2;
+  border: none;
+  padding: 9px;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.dropdown-button i {
+  font-size: 20px;
+  background-color: #F2F2F2;
 }
