--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,10 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0 auto;
 }
 
+.nav-items-container a{
+  color: #D94A4A;
+}
+
 .nav-items-container{
   display: flex;
   align-items: center;
@@ -57,13 +61,19 @@ input[type="number"]::-webkit-inner-spin-button {
   font-size: 22px;
 }
 
-.nav-items-container button{
+.nav-items-container .register-btn{
   border: 1px solid #8C281F;
   border-radius: 10px;
   padding: 6px 20px;
   color: #D94A4A;
   font-size: 22px;
   background-color: transparent;
+}
+
+.nav-items-container .login-btn{
+  border: none;
+  font-size: 22px;
+  color: #D94A4A;
 }
 
 .logo-container img{
@@ -256,7 +266,7 @@ input[type="number"]::-webkit-inner-spin-button {
   text-align: center;
 }
 
-.home-section1-light{
+.light-text{
   font-weight: 200;
 }
 
@@ -535,4 +545,148 @@ p.single-item-description{
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
+
+.login-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.shadow-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.login-box {
+  position: relative;
+  display: flex;
+  background-color: #F2F2F2;
+  border-radius: 10px;
+  z-index: 10;
+  overflow: hidden;
+  width: 80%;
+  max-width: 800px;
+  height: 500px;
+  box-sizing: border-box;
+}
+
+.login-box-left {
+  width: 50%;
+  padding: 30px 70px;
+  background-color: #D94A4A;
+  box-sizing: border-box;
+}
+
+.login-box-left ul{
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.login-box-left li{
+  font-size: 20px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 20px;
+}
+
+.login-box i{
+  color: #8c281f;
+}
+
+.login-box-left li i{
+  font-size: 24px;
+}
+
+.login-back-btn i{
+  font-size: 16px;
+  margin-right: 5px;
+}
+
+.login-box-right {
+  width: 50%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.login-box-right form {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.login-box-right label {
+  font-size: 20px;
+  color: #8C281F;
+  margin-bottom: 5px;
+}
+
+.login-box-right input {
+  padding: 10px;
+  border: 1px solid #8C281F;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  font-size: 16px;
+}
+
+.login-box-right input:focus{
+  outline: 1px solid #521711;
+}
+
+.login-box-right input::placeholder{
+  color: #D94A4A;
+  opacity: 0.5;
+}
+
+.login-box-right .login-back-btn {
+  font-size: 14px;
+  color: black;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+.login-box-right .login-submit-btn {
+  background-color: black;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  height: 40px;
+  width: 120px;
+  margin: 0 auto;
+  margin-top: 35px;
+}
+
+.login-box-right .login-bottom-text {
+  font-size: 12px;
+  text-align: center;
+  width: 200px;
+  margin: 0 auto;
+}
+
+.login-box-left-header{
+  font-size: 40px;
+  font-weight: 400;
+  text-align: center;
+  color: white;
 }
