--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -54,7 +54,7 @@
 .categories-price{
     width: 56px;
     height: 31px;
-    border: 1px solid #8C281F;
+    border: none;
     padding: 5px 10px;
     box-sizing: border-box;
   }
@@ -78,14 +78,14 @@
     height: 30px;
     font-size: 16px;
     padding: 5px 10px;
-    border: 1px solid #8C281F;
+    border: none;
   }
 
 .category-btns button{
     width: 130px;
     height: 35px;
     outline: none;
-    border: 1px solid #8C281F;
+    border: none;
     font-size: 16px;
     font-weight: 600;
   }
