--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -3,36 +3,43 @@
   }
   
 .categories-section-bottom .promo-items .single-item a > img{
-    height: 166px;
+    height: auto;
   }
 
 .single-item{
-    width: 212px;
-    height: 240px;
+    width: 300px;
+    height: 300px;
     text-align: left;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     font-weight: 500;
+    flex-direction: column;
   }
   
 .single-item a{
     height: 100%;
     width: 100%;
     color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
   }
   
 .single-item img{
     object-fit: cover;
+    height: 100%;
+    width: 100%;
   }
-  
-.single-item a > img{
-    height: 118px;
-  }
-  
+
+.single-item-top{
+  width: 100%;
+  height: 80%;
+}
+
 .single-item-img{
     width: 100%;
-    height: 118px;
   }
   
 .single-item-profile-img{
@@ -50,12 +57,29 @@
   
 .single-item h3{
     margin: 0;
-    font-size: 13px;
+    font-size: 16px;
     margin-bottom: 5px;
     font-weight: 500;
+    line-height: 1.2em;
+    height: 2.4em;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    text-overflow: ellipsis;
+    width: 100%;
   }
-  
+
 .single-item p{
     margin: 0;
     font-size: 13px;
   }
+
+.single-item-name-price p{
+    font-size: 16px;
+    margin-left: 2px;
+  }
+
+.single-item-date-address{
+  width: 100%;
+}
