--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -8,7 +8,7 @@
 
 .single-item{
     width: 300px;
-    height: 300px;
+    height: 240px;
     text-align: left;
     display: flex;
     align-items: center;
@@ -35,7 +35,7 @@
 
 .single-item-top{
   width: 100%;
-  height: 80%;
+  height: 68%;
 }
 
 .single-item-img{
@@ -80,6 +80,13 @@
     margin-left: 2px;
   }
 
-.single-item-date-address{
+.single-item-date-address {
   width: 100%;
+}
+
+.single-item-date-address p{
+  width: 100%;
+  overflow: hidden;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
 }
