--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,7 +5,7 @@ nav{
     border-bottom: 1px solid #999999;
     background: rgb(234,234,234);
     background: #f2f2f2;
-    padding: 15px 10%;
+    padding: 15px 90px;
   }
 
 .logo-container img{
