--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* @import "node_modules/react-image-gallery/styles/css/image-gallery.css"; */
+
 html{
   font-family: "Inter", sans-serif;
   font-weight: 350;
