--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -5,7 +5,7 @@ footer{
     display: flex;
     justify-content: space-between;
     align-content: center;
-    padding: 20px 10%;
+    padding: 20px 90px;
 }
 
 footer a{
