--- a/src/styles/add-item.css
+++ b/src/styles/add-item.css
@@ -197,3 +197,7 @@ textarea {
   opacity: 0;
   background-color: rgba(217, 74, 74, 0.3);
 }
+
+.delete-btn-dragged{
+  display: none !important;
+}
