--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-/* @import "node_modules/react-image-gallery/styles/css/image-gallery.css"; */
-
 html{
   font-family: "Inter", sans-serif;
   font-weight: 350;
+}
+
+*::placeholder, select option{
+  color: rgba(217, 74, 74, 0.5);
 }
 
 body{
@@ -37,7 +39,8 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .section{
-  padding: 0 90px;
+  /* padding: 0 90px; */
   margin: 0 auto;
   margin-bottom: 150px;
+  width: 70%;
 }
