--- a/src/styles/add-item.css
+++ b/src/styles/add-item.css
@@ -3,10 +3,16 @@
     flex-direction: column;
     align-items: center;
     font-family: Arial, sans-serif;
-    color: #b33a3a;
+    margin-top: 50px;
   }
-  
-  .ad-form {
+
+.form-container h3{
+  font-size: 20px;
+  color: #8C281F;
+  font-weight: 400;
+}
+
+.ad-form {
     display: flex;
     gap: 2rem;
     width: 60%;
@@ -19,31 +25,24 @@
     flex: 1;
   }
   
-.form-right {
-    flex: 1;
-  }
-  
-.form-right h3 {
-    margin-bottom: 10px;
-  }
-  
-label {
+.ad-form label {
     display: flex;
     flex-direction: column;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 20px;
+    color: #8C281F;
+    margin-bottom: 30px;
   }
   
-input[type="text"],
-select,
-textarea {
+.ad-form input,
+.ad-form select,
+.ad-form textarea {
     padding: 8px;
-    border: 1px solid #b33a3a;
-    border-radius: 4px;
+    border: 1px solid rgb(140, 40, 31, 0.7);
     margin-top: 5px;
+    font-size: 16px;
   }
   
-textarea {
+.ad-form textarea {
     resize: none;
     height: 150px;
   }
@@ -84,7 +83,19 @@ textarea {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
+    margin-bottom: 30px;
   }
+
+.ad-form input[type="text"]{
+  height: 50px;
+  width: 700px;
+  box-sizing: border-box;
+}
+
+.ad-form select{
+  width: 300px;
+  height: 50px;
+}
   
 .thumbnail {
     width: 185px;
@@ -200,4 +211,21 @@ textarea {
 
 .delete-btn-dragged{
   display: none !important;
+}
+
+.price-container{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+}
+
+.price-container input[type="number"]{
+  width: 200px;
+  height: 50px;
+  box-sizing: border-box;
+}
+
+.price-container select{
+  width: 100px;
 }
