--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -3,12 +3,12 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-    width: 50%;
+    width: 70%;
     margin: 0 auto;
   }
 
 .search-bar {
-    flex: 3.27;
+    flex: 80%;
     height: 42px;
     display: flex;
     align-items: center;
@@ -17,7 +17,7 @@
   }
 
 .search-button {
-    color: #D94A4A;
+    color: #8C281F;
     cursor: pointer;
     background-color: #F2F2F2;
     border: none;
@@ -32,7 +32,7 @@
   }
 
 .city-dropdown {
-    flex: 1;
+    flex: 20%;
     height: 42px;
     display: flex;
     align-items: center;
@@ -56,7 +56,7 @@
   }
 
 .dropdown-button {
-    color: #D94A4A;
+    color: #8C281F;
     cursor: pointer;
     background-color: #F2F2F2;
     border: none;
