--- a/src/styles/single-item-page.css
+++ b/src/styles/single-item-page.css
@@ -151,8 +151,9 @@
 }
 
 .single-item-container{
-  width: 100%;
-  padding: 0 90px;
+  width: 70%;
+  margin: 0 auto;
+  padding: 0;
   box-sizing: border-box;
 }
 
