--- a/src/styles/single-item-page.css
+++ b/src/styles/single-item-page.css
@@ -185,6 +185,9 @@
   font-size: 10px;
   padding: 0;
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .single-item-main-info hr{
@@ -385,4 +388,16 @@
 
 .single-item-report-box-container{
   position: absolute;
+}
+
+.single-item-added i{
+  cursor: pointer;
+  font-size: 16px;
+  transition: color 0.3s ease, transform 0.3s ease;
+  color: white;
+}
+
+.single-item-added i.fa-solid {
+  color: blue;
+  transform: scale(1.2);
 }
