--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -109,3 +109,26 @@
   text-wrap: nowrap;
   text-overflow: ellipsis;
 }
+
+.liked-bubble-container{
+  position: fixed;
+  bottom: 30px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  transition-duration: .3s;
+  opacity: 0.9;
+}
+
+.liked-bubble-container p{
+  width: auto;
+  height: auto;
+  padding: 10px 20px;
+  background-color: #D94A4A;
+  color: white;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
